# src/DotNetMicroservice/Models/OrderDto.cs
@@ -1,0 +1,11 @@
+﻿namespace DotNetMicroservice.Models
+{
+    public class OrderDto
+    {
+        public string Id { get; set; }
+
+        public string ProductId { get; set; }
+
+        public int Quantity { get; set; }
+    }
+}
